Code formatting, Pydoc & JSDoc implementation

--- a/2-DO-main/Website Code/website/templates/editform.html
+++ b/2-DO-main/Website Code/website/templates/editform.html
@@ -11,8 +11,8 @@
   </div>
   <div class="form-group">
     <label for="description">Description</label>
-    <input  type="text" class="form-control" id="description" name="description"
-      placeholder="Add a Description" value="{{ task.description }}">
+    <input type="text" class="form-control" id="description" name="description" placeholder="Add a Description"
+      value="{{ task.description }}">
   </div>
   <!-- Make sure to format the date correctly, the same format as the original -->
   <div class="form-group">
@@ -33,7 +33,8 @@
   </div>
   <div class="form-group">
     <label for="reminder_time">Set a Reminder Time</label>
-    <input type="datetime-local" class="form-control" id="reminder_time" name="reminder_time" value="{{ task.reminder_time}}">
+    <input type="datetime-local" class="form-control" id="reminder_time" name="reminder_time"
+      value="{{ task.reminder_time}}">
   </div>
 
   <div>
